; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/cpu/cpufreq/extr_intel_pstate.c_intel_pstate_sysfs_expose_params.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/cpu/cpufreq/extr_intel_pstate.c_intel_pstate_sysfs_expose_params.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }

@.str = private unnamed_addr constant [13 x i8] c"intel_pstate\00", align 1
@cpu_sysdev_class = common dso_local global %struct.TYPE_4__ zeroinitializer, align 4
@intel_pstate_kobject = common dso_local global i32 0, align 4
@intel_pstate_attr_group = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @intel_pstate_sysfs_expose_params to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @intel_pstate_sysfs_expose_params() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 @kobject_create_and_add(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @cpu_sysdev_class, i32 0, i32 0, i32 0))
  store i32 %2, i32* @intel_pstate_kobject, align 4
  %3 = load i32, i32* @intel_pstate_kobject, align 4
  %4 = icmp ne i32 %3, 0
  %5 = xor i1 %4, true
  %6 = zext i1 %5 to i32
  %7 = call i32 @BUG_ON(i32 %6)
  %8 = load i32, i32* @intel_pstate_kobject, align 4
  %9 = call i32 @sysfs_create_group(i32 %8, i32* @intel_pstate_attr_group)
  store i32 %9, i32* %1, align 4
  %10 = load i32, i32* %1, align 4
  %11 = call i32 @BUG_ON(i32 %10)
  ret void
}

declare dso_local i32 @kobject_create_and_add(i8*, i32*) #1

declare dso_local i32 @BUG_ON(i32) #1

declare dso_local i32 @sysfs_create_group(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
